force-app/main/default/objects/Site__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK( Account__r.Id) ,&quot; &quot;,  
Account__r.ShippingStreet &amp; &apos; &apos; &amp;
Account__r.ShippingCity &amp; &quot;, &quot; &amp;
Account__r.ShippingState &amp;&apos; &apos;&amp;
Account__r.ShippingPostalCode &amp;&apos; &apos;&amp;
Account__r.ShippingCountry )</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>