force-app/main/default/objects/Site__c/fields/Service_Address_As_Parent__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_As_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Address As Parent</label>
    <type>Checkbox</type>
</CustomField>