force-app/main/default/objects/Site__c/fields/Site_Market_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Market_Account_Name__c</fullName>
    <label>Site - Market - Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>