force-app/main/default/objects/Site__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
                <default>true</default>
                <label>Gas</label>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>