force-app/main/default/objects/Site__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>KWh</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>MWh</fullName>
            </value>
            <value>
                <fullName>DTH</fullName>
            </value>
            <value>
                <fullName>MCF</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>CCF</fullName>
            </value>
            <value>
                <fullName>Therm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>