force-app/main/default/objects/Site__c/fields/Volume_Electricity__c.field-meta.xml
<CustomField>
    <fullName>Volume_Electricity__c</fullName>
    <formula>IF( ISBLANK( Account__r.Id) , null,  
 VALUE(TEXT(Account__r.Total_Annual_Volume_ElectrictIy__c)))</formula>
    <label>Volume(Electricity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>