force-app/main/default/objects/Site__c/fields/Volume_Gas__c.field-meta.xml
<CustomField>
    <fullName>Volume_Gas__c</fullName>
    <formula>IF( ISBLANK( Account__r.Id) , null,  
 VALUE(TEXT( Account__r.Total_Annual_Volume_Gas__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume(Gas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>