force-app/main/default/objects/Site__c/validationRules/Site_name_must_be_13_characters_for_Albe.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_name_must_be_13_characters_for_Albe</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Market__r.Name = &apos;Alberta&apos;, LEN(Name) != 13)</errorConditionFormula>
    <errorMessage>Site name must be 13 characters for Alberta</errorMessage>
</ValidationRule>