force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Volume__c</columns>
    <columns>Type__c</columns>
    <columns>Site_Market_Account_Name__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>